--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="897.0" prefWidth="1349.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="897.0" prefWidth="1349.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="3.0" layoutY="2.0" prefHeight="890.0" prefWidth="390.0" style="-fx-background-color: #00c1c2;">
+      <VBox layoutX="7.0" layoutY="4.0" prefHeight="890.0" prefWidth="390.0" style="-fx-background-color: #00c1c2;">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <Button mnemonicParsing="false" prefHeight="49.0" prefWidth="389.0" text="Button" />
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Pacientes">
+               <padding>
+                  <Insets left="50.0" />
+               </padding></Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Médicos">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Controle de Disponibilidade/Agenda Médica">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Prontuário eletrônico">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Tela de Autoatendimento para Pacientes">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Especialidades">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Histórico de Pacientes">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
          </children>
       </VBox>
    </children>
