--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -3,47 +3,49 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="833.0" prefWidth="1278.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox layoutX="7.0" layoutY="4.0" prefHeight="827.0" prefWidth="390.0" style="-fx-background-color: #00c1c2;">
-         <children>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Pacientes">
-               <padding>
-                  <Insets left="50.0" />
-               </padding></Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Médicos">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="966.0" prefWidth="1527.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controllers.MainMenuController">
+   <BorderPane fx:id="mainPane" layoutX="8.0" layoutY="7.0" prefHeight="958.0" prefWidth="1519.0">
+      <left>
+         <VBox prefHeight="897.0" prefWidth="345.0" style="-fx-background-color: #00c1c2;" BorderPane.alignment="CENTER">
+            <Button fx:id="managePatients" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Pacientes">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Controle de Disponibilidade/Agenda Médica">
+            <Button fx:id="manageDoctors" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btnMngDoctors" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Médicos">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Prontuário eletrônico">
+            <Button fx:id="manageSchedule" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Controle de Disponibilidade/Agenda Médica">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Tela de Autoatendimento para Pacientes">
+            <Button fx:id="manageRecords" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Prontuário eletrônico">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Especialidades">
+            <Button fx:id="selfservicePatients" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Tela de Autoatendimento para Pacientes">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Histórico de Pacientes">
+            <Button fx:id="manageResidencies" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btnManageResidencies" prefHeight="70.0" prefWidth="389.0" styleClass="btn" stylesheets="@App.css" text="Gerenciar Especialidades">
                <padding>
                   <Insets left="50.0" />
                </padding>
             </Button>
-         </children>
-      </VBox>
-   </children>
+            <Button fx:id="historyPatients" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="97.0" prefWidth="385.0" styleClass="btn" stylesheets="@App.css" text="Histórico de Pacientes">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </Button>
+         </VBox>
+      </left>
+   </BorderPane>
 </AnchorPane>
